<resources>
    <!-- Main-->
    <string name="app_name">Schedule</string>
    <string name="title_activity_login">Activity Login</string>
    <string name="hello">Hello!</string>
    <string name="create_account_text">If you are here for the first time, you can</string>
    <string name="login_text">or</string>
    <string name="ip">http://192.168.43.187:8080</string>

    <!-- Login -->
    <string name="login">Login, please!</string>
    <string name="login_textLogin">Login:</string>
    <string name="login_textPassword">Password:</string>
    <string name="login_title">Enter the system</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="loginButton">          Login</string>
    <string name="singupText">No account yet? Create one!</string>
    <string name="login_enterEmail">Enter your e-mail</string>
    <string name="title_activity_register">RegisterActivity</string>


    <!-- SignUp -->
    <string name="signup_title">Sign up, please!</string>
    <string name="signup_name">Name</string>
    <string name="signup_surname">Surname</string>
    <string name="createButton">Create an account</string>
    <string name="signup_course">Course</string>
    <string name="signup_group">Group</string>
    <string name="back_text">Already a member? Login</string>

    <!-- View -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="choose">Choose day:</string>

    <!--  List Classes -->
    <string name="title_activity_classes_list">List Classes</string>
    <string name="time">TIME</string>
    <string name="lesson">LESSON</string>
    <string name="room">ROOM</string>
    <string name="type">TYPE</string>

    <!--  Menu -->
    <string name="refresh">Refresh</string>
    <string name="logoff">Log off</string>

    <!--  Schedule List -->
    <string name="title_activity_schedule_list">List Schedules</string>
    <string name="choose_schedule">Choose schedule:</string>
    <!--  New Schedule  -->
    <string name="new_schedule">New Schedule</string>
    <string name="schedule_name">Name</string>

    <!-- Dialog Windows -->
    <string name="wait">Please, wait..</string>
    <string name="login_wait">Login..</string>
    <string name="incorrent_email">Incorrect e-mail. Try again!</string>
    <string name="incorrent_password">Incorrect password. Try again!</string>
    <string name="signup_wait">SignUp...</string>
    <string name="success_signup">Successful signing!</string>
    <string name="change_email">Somebody has that e-mail. Change it!</string>
    <string name="add_wait">Adding..</string>
    <string name="success_adding">Successful adding!</string>
    <string name="success_deleting">Successful delete!</string>
    <string name="success_rename">Successful rename!</string>
    <string name="delete_wait">Deleting...</string>
    <string name="schedule_exist">This name already exists!</string>
    <string name="edit_wait">Edit...</string>
    <string name="success_edit">Successful edit!</string>
    <string name="offline">You are offline!</string>
    <string name="login_failed">Login failed</string>


    <string name="load_schedule">Load schedule...</string>
    <string name="success_schedule">Load Schedule Successfully!</string>

    <string name="name_schedule">Schedule name</string>
    <string name="enter_name">Enter schedule name:</string>
    <string name="enter_new_name_schedule">Rename </string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="yousure">Are you sure?</string>
    <string name="delete_schedule">Delete schedule: </string>
    <string name="not_deleting">This schedule must not be deleted!</string>
    <string name="not_editable">This schedule must not be edited!</string>

    <!--  New Class  -->
    <!--  Edit Class  -->
    <string name="new_class">New lesson: </string>
    <string name="edit_class">Edit lesson: </string>
    <string name="class_name">Name</string>
    <string name="class_room">Room</string>
    <string name="class_stime">Start Time</string>
    <string name="class_etime">End Time</string>
    <string name="class_type">Type</string>
    <string name="saveButton">Save</string>
    <string name="deleteclasstext">or: Delete this lesson!</string>


    <string name="delete_class">Do you want to delete this lesson?</string>

</resources>

