<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">

    <TableLayout
        android:id="@+id/tableClasses"
        style="@style/Table">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/iron"
            android:textSize="30dp"
            android:text="Today"
            android:id="@+id/tvDay" />

        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content"    >
            <TextView
                style =  "@style/Cell"
                android:text="@string/time" />
            <TextView
                style =  "@style/Cell"
                android:text="@string/lesson" />
            <TextView
                style =  "@style/Cell"
                android:text="@string/room" />
            <TextView
                style =  "@style/Cell"
                android:text="@string/type" />
        </TableRow>

    </TableLayout>
</LinearLayout>