<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.julie.myapplication.MainActivity"
    android:fillViewport="false">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

    <TextView android:text="@string/hello" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp" />
        <TextView android:text="@string/create_account_text" android:layout_width="wrap_content"
            android:layout_height="wrap_content"  />

        <android.support.v7.widget.AppCompatButton
            style = "@style/Button"
            android:id="@+id/btnSignUp"
            android:text="@string/createButton"/>

        <TextView android:text="@string/login_text" android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_marginLeft="160dp"
            android:textSize="15dp"/>
        <android.support.v7.widget.AppCompatButton
            style = "@style/Button"
            android:id="@+id/btnLogin"
            android:text="@string/loginButton"/>



        <TextView android:text="or magic" android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_marginLeft="160dp"
            android:textSize="15dp"/>
        <android.support.v7.widget.AppCompatButton
            style = "@style/Button"
            android:id="@+id/btnMagic"
            android:text="Teleport"/>


</LinearLayout>
    </ScrollView>
